# ImageViewer

./: BuildRTC.bat  CMakeLists.txt  ImageViewer.conf  README.ImageViewer  RTC.xml  RTC.xml20120808181547  RTC.xml20190724064748  RunRTC.bat  rtc.conf
cmake/: imageviewer-config-version.cmake.in  imageviewer-config.cmake.in  imageviewer.pc.in  wix.xsl.in
doc/: conf.py.in  doxyfile.in
doc/content/: index.txt  index_j.txt
idl/: CMakeLists.txt  Img.idl
include/: CMakeLists.txt
include/ImageViewer/: CMakeLists.txt  ImageViewer.h
src/: CMakeLists.txt  ImageViewer.cpp  ImageViewerComp.cpp
test/include/ImageViewerTest/: ImageViewerTest.h  ImgSVC_impl.h
test/src/: ImageViewerTest.cpp  ImageViewerTestComp.cpp  ImgSVC_impl.cpp
